syntax = "proto3";

package strims.network.v1;

option go_package = "github.com/MemeLabs/go-ppspp/pkg/apis/network/v1;network";
option java_package = "gg.strims.network.v1";
option swift_prefix = "SNT";

message PeerExchangeMessage {
  message Request {
    uint32 count = 1;
  }

  message Response {
    repeated bytes ids = 1;
  }

  message Offer {
    uint64 mediation_id = 1;
    bytes data = 2;
  }

  message Answer {
    uint64 mediation_id = 1;
    bytes data = 2;
  }

  message IceCandidate {
    uint64 mediation_id = 1;
    uint64 index = 2;
    bytes data = 3;
  }

  message CallbackRequest {}

  oneof body {
    Request request = 1;
    Response response = 2;
    Offer offer = 3;
    Answer answer = 4;
    IceCandidate ice_candidate = 5;
    CallbackRequest callback_request = 6;
  }
}
